--- a/styles/header.css
+++ b/styles/header.css
@@ -1,7 +1,9 @@
 header {
+  
   max-width: 80rem;
   height: 100%;
   padding: 1.25rem 2rem;
+  margin-inline: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
