--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -6,15 +6,15 @@
 
   margin-inline: auto;
 
-  & header {
+  header {
     text-align: center;
   }
 
-  & header span {
+  header span {
     font: 500 var(--text-sm)/1.5 var(--ff-base);
   }
 
-  & img {
+  img {
     width: 100%;
     margin: auto;
   }
@@ -29,20 +29,33 @@
     gap: 2.5rem;
   }
 
-  & figure {
+  figure {
+    position: relative;
     border-radius: 2.5rem;
     overflow: hidden;
+    line-height: 0;
+
+    animation: image-appear linear backwards;
+
+    animation-timeline: view();
+    animation-range: 100px 350px;
+
+    &[data-delay] {
+      animation-range: 150px 350px;
+    }
 
     &>img {
       height: 25rem;
       object-fit: cover;
+      transition: scale 500ms;
     }
 
     &:hover {
       &>img {
-       scale: 1.1;
+        scale: 1.1;
       }
-      figcaption{
+
+      figcaption {
         transform: translateY(0);
       }
     }
@@ -64,12 +77,39 @@
     }
   }
 
-  & figcaption {
+  figcaption {
     display: flex;
+    justify-content: flex-end;
     align-items: center;
-  }
+    gap: .5rem;
 
-  & figcaption img {
-    width: 2rem;
+    font: 500 var(--text-sm)/1.5 var(--ff-base);
+    color: white;
+
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding: 1.5rem 2rem;
+
+    transform: translateY(100%);
+    transition: transform 500ms;
+    background: linear-gradient(to top,
+        rgb(0 0 0 / 0.64),
+        rgb(0 0 0 / 0));
+
+    &>img {
+      margin-right: 0;
+      width: 2rem;
+      aspect-ratio: 1/1;
+      object-fit: cover;
+      border-radius: 50%;
+    }
+  }
+}
+
+@keyframes image-appear {
+  from {
+    opacity: 0;
+    transform: translateY(100%);
   }
 }
